# wotw-cookiecutter-base

./: .gitignore  .travis.yml  README.md  cookiecutter.json  setup.cfg  setup.py  tox.ini
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.directory_name}}/: .gitignore  LICENSE  README.md
