[metadata]
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
license_file = LICENSE

[bdist_wheel]
universal = 1

[options]
install_requires =
    jinja2-time
    pytest-runner
tests_require =
    mock
    pytest
    pytest-cookies

[tool:pytest]
addopts = -v -x --color=yes

[aliases]
test=pytest

[bumpversion]
current_version = 0.1.0
commit = True
tag = False

[bumpversion:file:setup.py]
