[bumpversion]
current_version = 0.2.0
commit = True
tag = False

[metadata]
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
license_file = LICENSE

[bdist_wheel]
universal = 1

[options]
install_requires =
    cookiecutter
    Jinja2
	jinja2-time
	pytest-runner
tests_require =
	mock
	pytest
	pytest-cookies

[tool:pytest]
addopts = -v -x --color=yes

[aliases]
test = pytest

[bumpversion:file:setup.py]

